--- a/TextgenerationGPT_2model.ipynb
+++ b/TextgenerationGPT_2model.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIBLnqAA+wPPjV+fp/bScC"
+      "authorship_tag": "ABX9TyNIBLnqAA+wPPjV+fp/bScC",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -703,6 +704,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DhanasekaranMariappan/TGMusingGPT-2/blob/main/TextgenerationGPT_2model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
