--- a/TextgenerationGPT_2model.ipynb
+++ b/TextgenerationGPT_2model.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSV9pQhZcFRJvgzwbimT0F",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNSV9pQhZcFRJvgzwbimT0F"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,7 +14,28 @@
     "language_info": {
       "name": "python"
     },
-    "layout": "IPY_MODEL_223c4cb96fdc439fac467c587a9dddfe"
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "88da31c4ba41449ba571ad31ddc3e7ab": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_c7675b69367d4f5b8983a96b3fec20eb",
+              "IPY_MODEL_13d9235d245b4ee7808f52a3eb19095f",
+              "IPY_MODEL_9808dd70c6734e9da14d1bd973bbaf6b"
+            ],
+            "layout": "IPY_MODEL_223c4cb96fdc439fac467c587a9dddfe"
           }
         },
         "c7675b69367d4f5b8983a96b3fec20eb": {
@@ -684,16 +704,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DhanasekaranMariappan/TGMusingGPT-2/blob/main/TextgenerationGPT_2model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
